Move pdf viewer to separate component

--- a/vue/src/assets/main.css
+++ b/vue/src/assets/main.css
@@ -3,11 +3,14 @@
     box-sizing: border-box;
 }
 
-body
+html, body, #app
 {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+    margin:0;
+}
+
+body {
+    
+    scrollbar-gutter: stable; /* Use scrollbar-gutter property */
 }
