Add CSS to dropZone and add reset functionality

--- a/vue/src/assets/main.css
+++ b/vue/src/assets/main.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+
 *
 {
     box-sizing: border-box;
+    font-family: 'Lexend', sans-serif;
+    font-weight: 300;
 }
 
 html, body, #app
@@ -10,7 +14,7 @@ html, body, #app
     margin:0;
 }
 
-body {
-    
+body
+{
     scrollbar-gutter: stable; /* Use scrollbar-gutter property */
 }
