--- a/vue/src/assets/main.css
+++ b/vue/src/assets/main.css
@@ -33,7 +33,7 @@ button, .button {
     cursor: pointer;
     border-radius: 0.25rem;
     font-size: 0.8em;
-    background-color: #f8f8f8;
+    background-color: #e6e6e6;
     border-radius: 0.4rem;
     padding: 0.8rem;
     transition: background-color 0.2s;
@@ -41,29 +41,29 @@ button, .button {
     box-shadow: 0 0px 5px rgba(0, 0, 0, 0.03);
 }
 button:hover, .button:hover {
-    background-color: #e6e6e6;
+    background-color: #f5f5f5;
 }
 .button.yellow, button.yellow {
     background-color: #f7f1d1;
 }
 .button.yellow:hover, button.yellow:hover {
-    background-color: #e4e1c6;
+    background-color: #fffbe0;
 }
 .button.green, button.green {
     background-color: #d6efd6;
 }
 .button.green:hover, button.green:hover {
-    background-color: #c7e7c7;
+    background-color: #e6ffe6;
 }
 .button.red, button.red {
     background-color: #efd6d6;
 }
 .button.red:hover, button.red:hover {
-    background-color: #e7c7c7;
+    background-color: #ffe6e6;
 }
 .button.blue, button.blue {
     background-color: #d6e9ef;
 }
 .button.blue:hover, button.blue:hover {
-    background-color: #c7e1e7;
+    background-color: #e6f5ff;
 }
